# Hacka_Pedro

./: CMakeLists.txt  README.md  package.xml
include/laser_trajetory_points/: laser_trajectory_points_node.hpp
launch/: laser_trajectory_points.launch.py
params/: waypoint.yaml
src/: laser_trajectory_points_main.cpp  laser_trajectory_points_node.cpp
